--- a/AdvWorks/Dockerfile.original
+++ b/AdvWorks/Dockerfile.original
@@ -7,16 +7,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
 WORKDIR /src
-COPY ["AdvWorks.Api.csproj", "."]
-RUN dotnet restore "AdvWorks.Api.csproj"
+COPY ["AdvWorks.csproj", "."]
+RUN dotnet restore "./AdvWorks.csproj"
 COPY . .
-WORKDIR "/src/"
-RUN dotnet build "AdvWorks.Api.csproj" -c Release -o /app/build
+WORKDIR "/src/."
+RUN dotnet build "AdvWorks.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "AdvWorks.Api.csproj" -c Release -o /app/publish
+RUN dotnet publish "AdvWorks.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "AdvWorks.Api.dll"]
+ENTRYPOINT ["dotnet", "AdvWorks.dll"]
