--- a/AdvWorks/Properties/launchSettings.json
+++ b/AdvWorks/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/AdvWorks.Api",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:23084",
       "sslPort": 44333
@@ -18,7 +22,7 @@
       }
     },
     "AdvWorks": {
-      "commandName": "Project",
+      "commandName": "IIS",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
       "environmentVariables": {
