Added connectionstring to appsettings.json

--- a/AdvWorks/appsettings.json
+++ b/AdvWorks/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "AdvWorks": "Server=tcp:geniedev99.database.windows.net,1433;Initial Catalog=AdventureWorks2019;Persist Security Info=False;User ID=geniedev99;Password=genieDev1!3;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "AllowedHosts": "*"
 }
