added app insights

--- a/AdvWorks/appsettings.json
+++ b/AdvWorks/appsettings.json
@@ -1,4 +1,10 @@
 {
+
+  "ApplicationInsights": {
+    "EnableAdaptiveSampling": false,
+    "EnablePerformanceCounterCollectionModule": false,
+    "ConnectionString": "InstrumentationKey=03db3d85-6155-40de-aa0c-e095a78b6914;IngestionEndpoint=https://eastus-8.in.applicationinsights.azure.com/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
