--- a/AdvWorks/appsettings.json
+++ b/AdvWorks/appsettings.json
@@ -13,7 +13,8 @@
     }
   },
   "ConnectionStrings": {
-    "AdvWorks": "Server=tcp:geniedev99.database.windows.net,1433;Initial Catalog=AdventureWorks2019;Persist Security Info=False;User ID=geniedev99;Password=genieDev1!3;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
+    "AdvWorks": "Data Source=DESKTOP-G3VCQ2B;Initial Catalog=AdventureWorks2019;User ID=visarada;Password=Visarada"
   },
   "AllowedHosts": "*"
 }
